--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,8 +19,10 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Slug', name: 'slug', widget: 'string' }
+      - { label: 'Image', name: 'image', widget: 'image' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Author', name: 'author', widget: 'datetime' }
-      - { label: 'Read Time', name: 'readTime', widget: 'string' }
+      - { label: 'Author', name: 'author', widget: 'string' }
+      - { label: 'Category', name: 'category', widget: 'string' }
+      - { label: 'Read Time', name: 'readTime', widget: 'number' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
 
