--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,8 +11,8 @@ collections:
     folder: 'src/posts'
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{fields.slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    media_folder: ''
-    public_folder: ''
+    media_folder: static/img # Media files will be stored in the repo under images/uploads
+    public_folder: /img
     site_url: https://eloquent-meitner-71e901.netlify.app
     display_url: https://eloquent-meitner-71e901.netlify.app
     path: '{{title}}/index'
